ocfl-java-core/src/test/resources/validation/version/content-file-missing-when-duplicate/inventory.json.sha512
ca8118ba472a005b31fbdc5a08e099743a776af3305742aac8ca008d73933758e57a94dfc603f2a3b21dcba4a900ce0165bd7fac94c8e369afadffe880435c09	inventory.json