ocfl-java-core/src/test/resources/invalid-repos/bad-logical-paths/o2/v6/inventory.json.sha512
989c82f22e7f8ff161d028ba3f7c017e0262f4ea47188365bbee273a4269b4ff70824b8eac6316fa82fe6b4b2ceacf61d9cb8ac267facf12c6df3e1aa169bcf1	inventory.json